[package]
name = "s1ap-structured-fuzzing"
version = "0.1.0"
edition = "2021"

[lib]
name = "s1apstructuredfuzz"
crate-type = ["rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
arbitrary = { version = "1.2", path = "./deps/arbitrary", features = ["derive"] }
asn1-codecs = { git = "https://github.com/nathaniel-bennett/hampi" }
asn1_codecs_derive = { git = "https://github.com/nathaniel-bennett/hampi" }
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4" }
libc = { version = "0.2" }
bitvec = { version = "1.0", features = ["serde"] }

hex = "0.4.3"
env_logger = "0.10"
